Introduce remove action to Enrich mediator.
Introduce remove action to Enrich mediator in management console.
Fixes wso2/product-ei/issues/5199

--- a/components/mediation-ui/mediators-ui/org.wso2.carbon.mediator.enrich.ui/src/main/resources/org/wso2/carbon/mediator/enrich/ui/i18n/Resources.properties
+++ b/components/mediation-ui/mediators-ui/org.wso2.carbon.mediator.enrich.ui/src/main/resources/org/wso2/carbon/mediator/enrich/ui/i18n/Resources.properties
@@ -15,6 +15,7 @@ mediator.enrich.property=Property
 mediator.enrich.inline=Inline XML / JSON
 mediator.enrich.targetheader=Target
 mediator.enrich.target.action=Action
+mediator.enrich.target.action.remove=remove
 mediator.enrich.target.action.replace=replace
 mediator.enrich.target.action.child=child
 mediator.enrich.target.action.sibling=sibling
