Add aggregateElementType to the management console
Add aggregateElementType field for Aggregate mediator in the management
console.

--- a/components/mediation-ui/mediators-ui/org.wso2.carbon.mediator.aggregate.ui/src/main/resources/org/wso2/carbon/mediator/aggregate/ui/i18n/Resources.properties
+++ b/components/mediation-ui/mediators-ui/org.wso2.carbon.mediator.aggregate.ui/src/main/resources/org/wso2/carbon/mediator/aggregate/ui/i18n/Resources.properties
@@ -5,6 +5,7 @@ mediator.aggregate.expression=Aggregation Expression
 mediator.aggregate.prefix=Prefix
 mediator.aggregate.uri=URI   
 mediator.aggregate.timeout=Completion Timeout(seconds)
+mediator.aggregate.element.type=Aggregate Element Type
 mediator.aggregate.maxmessages=Completion Max-messages
 mediator.aggregate.minmessages=Completion Min-messages
 mediator.aggregate.correlation=Correlation Expression
