Show failed to resolve state for MP error when there is a cluster issue

--- a/components/mediation-ui/org.wso2.carbon.message.processor.ui/src/main/resources/org/wso2/carbon/message/processor/ui/i18n/Resources.properties
+++ b/components/mediation-ui/org.wso2.carbon.message.processor.ui/src/main/resources/org/wso2/carbon/message/processor/ui/i18n/Resources.properties
@@ -27,6 +27,7 @@ deactivate=Deactivate
 activate=Activate
 inactive=Inactive
 active=Active
+inconsistent=N/A - Failed to resolve state (If this is a cluster node, Please check the others)
 no.messageProcessors.are.currently.defined=No Message Processors are currently defined.
 message.Processor= Message Processor
 name=Name
